// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile m huge 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 10px;
  font-size: 24;
  line-height: 24px;
  margin-top: 30px;
  text-align: center;
}

.IS2 {
  font-family: TimesModern-Regular;
  font-size: 16;
  line-height: 19;
  color: #333333;
  padding-bottom: 5px;
  text-align: center;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "60px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Driving Off
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m medium 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
  margin-top: 30px;
  text-align: center;
}

.IS2 {
  font-family: TimesModern-Regular;
  font-size: 16;
  line-height: 19;
  color: #333333;
  padding-bottom: 5px;
  text-align: center;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "30px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Driving Off
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m small 1`] = `
<style>
.IS1 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
  margin-top: 20px;
  text-align: center;
}

.IS2 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #696969;
  padding-bottom: 10px;
  text-align: center;
  padding-horizontal: 40px;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Driving Off
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m wide 1`] = `
<style>
.IS1 {
  color: #1D1D1B;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 24;
  line-height: 24px;
  margin-top: 30px;
  text-align: center;
}

.IS2 {
  font-family: TimesModern-Regular;
  font-size: 16;
  line-height: 19;
  color: #333333;
  padding-bottom: 5px;
  text-align: center;
}
</style>

<Link
  linkStyle={
    Object {
      "paddingBottom": "60px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Driving Off
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags />
  </div>
</Link>
`;

exports[`tile m without breakpoint should be like small 1`] = `
<style>
.IS1 {
  color: #333333;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 5px;
  font-size: 20;
  line-height: 20px;
  margin-top: 20px;
  text-align: center;
}

.IS2 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #696969;
  padding-bottom: 10px;
  text-align: center;
  padding-horizontal: 40px;
}

.IS3 {
  flex: 1;
}
</style>

<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingBottom": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS3"
  >
    <div
      aria-level="3"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS1"
      role="heading"
    >
      Driving Off
    </div>
    <div
      aria-level="4"
      className="tc-text__TcText-sc-15igzev-0 lhcAkf IS2"
      role="heading"
    >
      Three Conservative MPs resign
    </div>
    <ArticleFlags />
  </div>
</Link>
`;
